[package]
name = "mininip"
version = "1.2.0"
authors = ["Boris DRYKONINGEN <boris.d@orange.fr>"]
edition = "2018"
license = "MPL-2.0"
description = "An minimalist ini file parser (MinIniP stands for Minimalist Ini Parser). It is written in Rust but I would export its API to the C programming language in order to make various bindings"
repository = "https://github.com/BorisDRYKONINGEN/mininip"

[dependencies]
